# AI-Powered-Islamic-Educational-and-QA-System-using-RAG

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Zad-Islamic-AI.sln  Zad.sln  build_and_push.bat  create access token flutter-voice chat  docker-compose.yml  fetch_log.txt  fix_env.py  flutter wanna sleep  flutter_launcher_icons.yaml  modal_embed_api.py  pubspec.yaml  pyproject.toml  requirements.txt  scratch_test.py  setup.py  start_api.ps1  structure.txt  test_stream.html
Zad.API/: Program.cs  Zad.API.csproj  Zad.API.http  appsettings.Development.json  appsettings.json
Zad.Application/: Zad.Application.csproj
Zad.Domain/: Zad.Domain.csproj
Zad.Infrastructure/: Zad.Infrastructure.csproj
Zad.IntegrationTests/: FinalIntegrationTests.cs  Zad.IntegrationTests.csproj
android/: build.gradle
docker-release/: DOCKER_README.md  docker-compose.yml  start-zad-ai.bat
docs/: USEFUL_COMMANDS.md  ai-design.md  ai_project_structure.md  api_contract.md  books_with_id.md  bug_citation_url.md  chunking_strategy.md  clean_data_running.md  codebase_analysis.md  deployment-guide.md  docker_plan.md  extraction_pipeline_flow.md  llm_fallback_architecture.md  modal_deployment.md  preprocessing_guide.md  preprocessing_statistics.md  response parsing.md  retrieval_optimization.md  roadmap.md  set_timer_plan.md  time_cost_proplem_and_dockerImageCearation.md  voice_plan.md
lib/: main.dart
scripts/: build_and_push.bat  build_book_index.py  (+1 more)
services/voice_agent/: Dockerfile  agent.py  docker-compose.yml  livekit.toml  main.py  pyproject.toml  test_client.html
(+289 files in other folders)
